# Determinant_finder

./: CMakeLists.txt  README.md
data/: matrix_1000x1000.txt  matrix_100x100.txt  matrix_10x10.txt  matrix_250x250.txt  matrix_350x350.txt  matrix_500x500.txt  matrix_650x650.txt  matrix_850x850.txt
src/: main.cpp  matrix.cpp  matrix.hpp
tests/: catch.cpp  catch.hpp  tests.cpp
